[project]
name = "zs"
version = "0.1.0"
description = "Personal Shell"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
dependencies = [
    "click>=8.1.8",
    "tabulate>=0.9.0",
    "requests>=2.32.3",
    "zuu @ git+https://github.com/z2u4/py_zuu.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
zs = "z2u4.zs:_run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/z2u4"]
